--- a/goodbyeget/libp2p/protocols/pubsub/rpc/messages.html
+++ b/goodbyeget/libp2p/protocols/pubsub/rpc/messages.html
@@ -244,7 +244,9 @@ window.addEventListener("DOMContentLoaded", main2);
     title="RPCMsg = object
   subscriptions*: seq[SubOpts]
   messages*: seq[Message]
-  control*: Option[ControlMessage]">RPCMsg</a></li>
+  control*: Option[ControlMessage]
+  ping*: seq[byte]
+  pong*: seq[byte]">RPCMsg</a></li>
   <li><a class="reference" href="#SubOpts"
     title="SubOpts = object
   subscribe*: bool
@@ -428,6 +430,8 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">subscriptions</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#SubOpts"><span class="Identifier">SubOpts</span></a><span class="Other">]</span>
   <span class="Identifier">messages</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">]</span>
   <span class="Identifier">control</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a><span class="Other">]</span>
+  <span class="Identifier">ping</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
+  <span class="Identifier">pong</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -465,9 +469,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L92"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L94"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L92" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L94" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -477,9 +481,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L110"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L112"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L110" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L112" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -489,9 +493,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L100"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L102"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L100" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L102" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -501,9 +505,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L82"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L84"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L82" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L84" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -513,9 +517,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L71"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L73"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L71" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -525,9 +529,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L77"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L79"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L77" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L79" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -537,9 +541,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L87"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L89"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L87" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L89" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -550,9 +554,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L66"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/protocols/pubsub/rpc/messages.nim#L68"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L66" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/rpc/messages.nim#L68" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -566,7 +570,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-15 08:35:49 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-21 09:21:01 UTC</small>
       </div>
     </div>
   </div>
