--- a/gossipsub-scoring-improve/libp2p/crypto/hkdf.html
+++ b/gossipsub-scoring-improve/libp2p/crypto/hkdf.html
@@ -17,10 +17,10 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>libp2p/utility</title>
-<link rel="stylesheet" type="text/css" href="../nimdoc.out.css">
+<title>libp2p/crypto/hkdf</title>
+<link rel="stylesheet" type="text/css" href="../../nimdoc.out.css">
 
-<script type="text/javascript" src="../dochack.js"></script>
+<script type="text/javascript" src="../../dochack.js"></script>
 
 <script type="text/javascript">
 function main() {
@@ -69,7 +69,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">libp2p/utility</h1>
+    <h1 class="title">libp2p/crypto/hkdf</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -82,7 +82,7 @@ window.addEventListener('DOMContentLoaded', main);
   <div id="global-links">
     <ul class="simple">
     <li>
-      <a href="../theindex.html">Index</a>
+      <a href="../../theindex.html">Index</a>
     </li>
     </ul>
   </div>
@@ -197,39 +197,21 @@ window.addEventListener("DOMContentLoaded", main2);
 </script>
 <ul class="simple simple-toc" id="toc-list">
 <li>
-  <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
+  <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">shortLog
-      <li><a class="reference" href="#shortLog%2CopenArray%5Bbyte%5D"
-    title="shortLog(item: openArray[byte]): string">shortLog(item: openArray[byte]): string</a></li>
-  <li><a class="reference" href="#shortLog%2Cstring"
-    title="shortLog(item: string): string">shortLog(item: string): string</a></li>
-
-  </ul>
+      <li><a class="reference" href="#HkdfResult"
+    title="HkdfResult[len] = array[len, byte]">HkdfResult</a></li>
 
   </ul>
 </li>
 <li>
-  <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
+  <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">compilesOr
-      <li><a class="reference" href="#compilesOr.t%2Cuntyped%2Cuntyped"
-    title="compilesOr(a, b: untyped): untyped">compilesOr(a, b: untyped): untyped</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">exceptionToAssert
-      <li><a class="reference" href="#exceptionToAssert.t%2Cuntyped"
-    title="exceptionToAssert(body: untyped): untyped">exceptionToAssert(body: untyped): untyped</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">public
-      <li><a class="reference" href="#public.t"
-    title="public()">public()</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">safeConvert
-      <li><a class="reference" href="#safeConvert.t%2CS"
-    title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
+      <ul class="simple nested-toc-section">hkdf
+      <li><a class="reference" href="#hkdf%2Ctype%5BT%5D%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D%2CopenArray%5BHkdfResult%5Blen%5D%5D"
+    title="hkdf[T: sha256; len: static int](_: type[T]; salt, ikm, info: openArray[byte];
+                                 outputs: var openArray[HkdfResult[len]])">hkdf[T: sha256; len: static int](_: type[T]; salt, ikm, info: openArray[byte];
+                                 outputs: var openArray[HkdfResult[len]])</a></li>
 
   </ul>
 
@@ -240,91 +222,46 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </div>
   &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L1"
+href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/crypto/hkdf.nim#L1"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/hkdf.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
 
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
   <p class="module-desc"></p>
-  <div class="section" id="12">
-<h1><a class="toc-backref" href="#12">Procs</a></h1>
+  <div class="section" id="7">
+<h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
-<div id="shortLog,openArray[byte]" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#shortLog%2CopenArray%5Bbyte%5D"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">item</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="HkdfResult" class="tohide">
+<dt><pre><a href="hkdf.html#HkdfResult"><span class="Identifier">HkdfResult</span></a><span class="Other">[</span><span class="Identifier">len</span><span class="Other">]</span> <span class="Other">=</span> <span class="Identifier">array</span><span class="Other">[</span><span class="Identifier">len</span><span class="Other">,</span> <span class="Identifier">byte</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L25"
+href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/crypto/hkdf.nim#L17"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="shortLog,string" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#shortLog%2Cstring"><span class="Identifier">shortLog</span></a><span class="Other">(</span><span class="Identifier">item</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L37"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L37" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/hkdf.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 
 </dl></div>
-<div class="section" id="18">
-<h1><a class="toc-backref" href="#18">Templates</a></h1>
+<div class="section" id="12">
+<h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="compilesOr.t,untyped,untyped" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#compilesOr.t%2Cuntyped%2Cuntyped"><span class="Identifier">compilesOr</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<div id="hkdf,type[T],openArray[byte],openArray[byte],openArray[byte],openArray[HkdfResult[len]]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#hkdf%2Ctype%5BT%5D%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D%2CopenArray%5Bbyte%5D%2CopenArray%5BHkdfResult%5Blen%5D%5D"><span class="Identifier">hkdf</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">sha256</span><span class="Other">;</span> <span class="Identifier">len</span><span class="Other">:</span> <span class="Identifier">static</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Operator">_</span><span class="Other">:</span> <span class="Identifier">type</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span>
+                                      <span class="Identifier">salt</span><span class="Other">,</span> <span class="Identifier">ikm</span><span class="Other">,</span> <span class="Identifier">info</span><span class="Other">:</span> <span class="Identifier">openArray</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">;</span>
+                                      <span class="Identifier">outputs</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">openArray</span><span class="Other">[</span><a href="hkdf.html#HkdfResult"><span class="Identifier">HkdfResult</span></a><span class="Other">[</span><span class="Identifier">len</span><span class="Other">]</span><span class="Other">]</span><span class="Other">)</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L19"
+href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/crypto/hkdf.nim#L19"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L19" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="exceptionToAssert.t,untyped" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#exceptionToAssert.t%2Cuntyped"><span class="Identifier">exceptionToAssert</span></a><span class="Other">(</span><span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L73"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="public.t" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#public.t"><span class="Identifier">public</span></a><span class="Other">(</span><span class="Other">)</span> {.<span class="Identifier">pragma</span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L14"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L14" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="safeConvert.t,S" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
-<dd>
-
-Converts <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> from S to <tt class="docutils literal"><span class="pre"><span class="Identifier">T</span></span></tt> iff <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> is guaranteed to be preserved.
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/gossipsub-scoring-improve/libp2p/utility.nim#L66"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L66" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/crypto/hkdf.nim#L19" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -338,7 +275,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-23 13:05:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-23 13:05:46 UTC</small>
       </div>
     </div>
   </div>
